# elysium

./: Cargo.toml  readme.md
.cargo/: config.toml
crates/elysium/: Cargo.toml
crates/elysium-cli/: Cargo.toml
crates/elysium-cli/src/: main.rs
crates/elysium/src/: lexer.rs  lib.rs  syntax.rs
crates/elysium/src/parser/: event.rs  sink.rs
elysium/: Cargo.toml
elysium-cli/: Cargo.toml
elysium-cli/src/: main.rs
elysium/src/: ast.rs  hir.rs  lexer.rs  lib.rs  main.rs  parser.rs  syntax.rs
elysium/src/ast/: mod.rs  tree.rs  validation.rs
elysium/src/hir/: alloc.rs  hir.rs  mod.rs
elysium/src/lexer/: lex.rs  mod.rs  tokens.rs
elysium/src/parser/: event.rs  expr.rs  marker.rs  mod.rs  parser.rs  sink.rs  source.rs
elysium/src/parser/grammar/: expr.rs  mod.rs  stmt.rs
elysium/src/parser/parser/: parse_error.rs
fuzz/: Cargo.toml  crash-a326e26bc9de7bb9501e3009ce0b8b2f94838110
fuzz/artifacts/parse_lower/: crash-9c3c685fcc81e0243d83f062ec13bd6a6fbe129a
fuzz/corpus/main/: example
fuzz/fuzz_targets/: main.rs  parse_lower.rs
