[workspace]
resolver = "2"
members = ["elysium", "fuzz"]
package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
drop_bomb = "0.1.5"
expect-test = "1.5.1"
logos = "0.15.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
rowan = "0.16.1"
smartstring = "1.0.1"
la-arena = "0.3.1"
libfuzzer-sys = "0.4.9"
