[package]
name = "elysium"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb.workspace = true
logos.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rowan.workspace = true
smartstring.workspace = true

[dev-dependencies]
expect-test.workspace = true
